Add workspace service and fix mssql healthcheck for ODBC18

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - mssql_data:/var/opt/mssql
     healthcheck:
-      test: [ "CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P $$MSSQL_SA_PASSWORD -Q \"SELECT 1\" -b -o /dev/null || exit 1" ]
+      test: [ "CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -C -S localhost -U sa -P $$MSSQL_SA_PASSWORD -Q \"SELECT 1\" -b -o /dev/null || exit 1" ]
       interval: 10s
       timeout: 5s
       retries: 30
@@ -33,6 +33,14 @@ services:
       interval: 10s
       timeout: 5s
       retries: 30
+
+  workspace:
+    image: mcr.microsoft.com/devcontainers/base:ubuntu-22.04
+    container_name: perf-workspace
+    volumes:
+      - ..:/workspaces/${localWorkspaceFolderBasename}:cached
+    working_dir: /workspaces/${localWorkspaceFolderBasename}
+    command: sleep infinity
 
 volumes:
   mssql_data:
